# tiny-transformer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: tiny_shakespeare_excerpt.txt
demo/: tiny-transformer-demo.pt
docs/assets/: training-loss.csv
src/tiny_transformer/: __init__.py  cli.py  config.py  data.py  model.py  tokenizer.py  train.py  visualize.py  web.py
tests/: test_model.py  test_tokenizer.py
